# LLMK

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Cargo.toml  README.md  arm-gcc-toolchain.cmake  install_dependencies.bat  install_dependencies.sh
.cargo/: config.toml
.github/workflows/: ci.yml  docker-ci.yml  firmware.yml
Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal.h
Inc/: main.h  usb_device.h
Src/: keyboard.c  main.c  system_stm32h7xx.c  usb_device.c
Startup/: STM32H723ZGTX_FLASH.ld  startup_stm32h723zgtx.s
Tools/: cppcheck-suppressions.txt
bootloader/: Cargo.toml  memory.x
bootloader/src/: main.rs
cmake/: arm-none-eabi-gcc.cmake  build_config.cmake  toolchain.cmake
core/: Cargo.toml
core/src/: debounce.rs  direct.rs  lib.rs  logic.rs  matrix.rs  traits.rs
core/tests/: mock_matrix.rs  test_matrix.rs
development/: pseduo.md
drivers/: CMSIS  CMakeLists.txt  STM32H7xx_HAL_Driver
drivers/CMSIS/Device/ST/STM32H7xx/Include/: stm32h723xx.h  stm32h7xx.h  stm32h7xx_hal.h  stm32h7xx_hal_ci.h  stm32h7xx_hal_def.h  stm32h7xx_hal_exti.h  stm32h7xx_hal_exti_ex.h  stm32h7xx_hal_exti_reg.h  stm32h7xx_hal_typedef.h
drivers/CMSIS/Include/: core_cm7.h
drivers/STM32H7xx_HAL_Driver/Inc/: usb_device.h  usbd_hid.h
drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c  stm32h7xx_hal_ci.c
firmware/: Cargo.toml  build.rs  memory.x
firmware/src/: main.rs
inc/: keyboard.h  main.h  stm32h7xx.h  stm32h7xx_hal_conf.h  usb_device.h  usbd_conf.h  usbd_desc.h
inc/dependency/: gpio_accessor.h
inc/service/: main.h
inc/system/: stm32h723x.h  stm32h7xx.h  system_init.h
scripts/: build.sh  install_dependencies.sh
scripts/Windows/: build.bat  install_dependencies.bat
simulator/: Cargo.toml
simulator/src/: input_scenario.rs  main.rs  sim_hal.rs
src/: CMakeLists.txt  keyboard.c  main.c  system_stm32h7xx.c  usb_device.c  usbd_desc.c
src/dependency/: gpio_accessor_stm32.c
src/logic/: matrix_scanner.c
src/service/: main.c
src/system/: system_init.c
startup/: CMakeLists.txt  STM32H723ZGTX_FLASH.ld
tests/: Makefile
tools/: cppcheck-suppressions.txt  misra.json
tst/dependency/: gpio_accessor_mock.c
tst/service/: test_main.c
usb/: CMakeLists.txt
usb/device/: usbd_hid.h
