[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
keyboard-core = { path = "../core", default-features = false, features = ["std"] }
chrono = "0.4"

[features]
no-debounce = ["keyboard-core/no-debounce"]
time-debounce = ["keyboard-core/time-debounce"]
mask-debounce = ["keyboard-core/mask-debounce"]

[dev-dependencies]
cargo-tarpaulin = "0.32"

